# lz4-frame-conduit

./: CHANGELOG.md  LICENSE  README.md  lz4-conduit.cabal  lz4-frame-conduit.cabal  shell.nix  stack.yaml
app/: Main.hs
src/Codec/Compression/LZ4/: CTypes.hs  CTypes.hsc  Conduit.hsc
test/: Main.hs
