name:                lz4-conduit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nh2/lz4-conduit#readme
license:             MIT
license-file:        LICENSE
author:              Niklas Hambüchen
maintainer:          niklas@fpcomplete.com
copyright:           2017 Niklas Hambüchen
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  README.md
                     lz4/lib/lz4.c
                     lz4/lib/lz4.h
                     lz4/lib/lz4frame.c
                     lz4/lib/lz4frame.h
                     lz4/lib/lz4frame_static.h
                     lz4/lib/lz4hc.c
                     lz4/lib/lz4hc.h
                     lz4/lib/xxhash.c
                     lz4/lib/xxhash.h


library
  hs-source-dirs:      src
  exposed-modules:     Codec.Compression.LZ4.Conduit
                       Codec.Compression.LZ4.CTypes
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , containers
                     , bytestring
                     , inline-c
                     , raw-strings-qq
                     , template-haskell
                     , safe-exceptions
  build-tools:         hsc2hs
  include-dirs:        lz4/lib
  c-sources:           lz4/lib/lz4.c
                       lz4/lib/lz4frame.c
                       lz4/lib/lz4hc.c
                       lz4/lib/xxhash.c
                       src/Codec/Compression/LZ4/Conduit.c
  other-extensions:    TemplateHaskell
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite lz4-conduit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , lz4-conduit
                     , bytestring
                     , conduit
                     , conduit-extra
                     , resourcet
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nh2/lz4-conduit
