name:                lz4-frame-conduit
version:             0.1.0.0
synopsis:            Conduit implementing the official LZ4 frame straming format
description:         Conduit implementing the official LZ4 frame straming format
homepage:            https://github.com/nh2/lz4-frame-conduit#readme
license:             MIT
license-file:        LICENSE
author:              Niklas Hambüchen
maintainer:          niklas@fpcomplete.com
copyright:           2017 Niklas Hambüchen
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  README.md
                     lz4/lib/lz4.c
                     lz4/lib/lz4.h
                     lz4/lib/lz4frame.c
                     lz4/lib/lz4frame.h
                     lz4/lib/lz4frame_static.h
                     lz4/lib/lz4hc.c
                     lz4/lib/lz4hc.h
                     lz4/lib/xxhash.c
                     lz4/lib/xxhash.h


library
  hs-source-dirs:      src
  exposed-modules:     Codec.Compression.LZ4.Conduit
                       Codec.Compression.LZ4.CTypes
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , conduit-extra
                     , containers
                     , bytestring
                     , inline-c
                     , raw-strings-qq
                     , resourcet
                     , template-haskell
                     , unliftio
                     , unliftio-core
  build-tools:         hsc2hs
  include-dirs:        lz4/lib
  c-sources:           lz4/lib/lz4.c
                       lz4/lib/lz4frame.c
                       lz4/lib/lz4hc.c
                       lz4/lib/xxhash.c
  other-extensions:    TemplateHaskell
  ghc-options:         -Wall
  default-language:    Haskell2010

executable haskell-lz4c
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , lz4-frame-conduit
                     , bytestring
                     , conduit
                     , conduit-extra
                     , optparse-applicative
                     , resourcet
                     , text
  -- Defaulting to -N1 here because we would not benefit from
  -- more cores (and parallel GC makes it ~5% slower on my
  -- i5-2520M with GHC 8.2.2).
  ghc-options:         -Wall -rtsopts -threaded -with-rtsopts=-N1
  default-language:    Haskell2010

test-suite lz4-frame-conduit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , lz4-frame-conduit
                     , bytestring
                     , conduit
                     , conduit-extra
                     , hspec
                     , pcg-random
                     , QuickCheck
                     , resourcet
                     , spool
                     , unliftio-core
                     , vector
  ghc-options:         -Wall -rtsopts -threaded -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nh2/lz4-frame-conduit
